--- a/src/pages/report/report.css
+++ b/src/pages/report/report.css
@@ -1,3 +1,31 @@
 .report{
     flex: 4;
 }
+
+.reportUser {
+  display: flex;
+  align-items: center;
+}
+
+.reportImg {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
+}
+
+.reportEdit{
+    border: none;
+    border-radius: 10px;
+    padding: 5px 10px;
+    background-color: #3bb077;
+    color: white;
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+.reportDelete{
+    color: red;
+    cursor: pointer;
+}
