--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -45,3 +45,31 @@
     font-size: 20px !important;
 
 }
+
+@media screen and (max-width:500){
+.sidebarListItem {
+        padding: 1px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        border-radius: 8px;
+        height: 40px;
+    }
+.sidebarIcon {
+    margin-right: 5px;
+    font-size: 10px !important;
+
+}
+.sidebar {
+    flex: 1;
+    height: calc(150vh - 100px);
+    background-color: #FFE6E8;
+    position: sticky;
+    top: 20px;
+}
+.sidebarTitle {
+    font-size: 15px;
+    color: black;
+    height: 10px;
+}
+}
