--- a/src/components/widgetlarge/widgetlarge.css
+++ b/src/components/widgetlarge/widgetlarge.css
@@ -4,6 +4,7 @@
     padding: 20px;
     margin: 20px;
     flex : 2;
+    color: black;
 }
 .WidgetlargeTitle{
     font-size: 22px;
@@ -15,6 +16,10 @@
 }
 .WidgetlargeTh{
     text-align: left;
+    text-indent: 5px;
+    line-height: 2.0;
+    font-size: 20px;
+
 }
 .WidgetLargeImg{
     width: 40px;
@@ -30,9 +35,15 @@
     border-radius: 10px;
 }
 .WidgetLargeButton.Active{
-    background-color: lightgreen;
-    color: darkgreen;
+    align-items: center;
+    border: none;
+    border-radius: 5px;
+    padding: 1px 3px;
+    background-color: azure;
+    color: black;
+    cursor: pointer;
     font-style: bold;
+    
 }
 
 .WidgetlargeUser{
@@ -45,4 +56,22 @@
 }
 .WidgetlargeAmount{
     font-weight: 300;
+}
+
+@media screen and (max-width:500){
+    .Widgetlarge {
+            -webkit-box-shadow: 0px 0px 15px -10px#000000;
+            box-shadow: 0px 0px 40px -10px #000000;
+            padding: 5px;
+            margin: 20px;
+            flex: 2;
+            color: black;
+        }
+    .WidgetlargeTh {
+            text-align: left;
+            text-indent: 1px;
+            line-height: 2.0;
+            font-size: 10px;
+    
+        }
 }
